# serializer version: 1
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new
  '''
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.1
  '''
  SELECT "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.10
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."active"
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_featureflag"."team_id" = 2)
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.11
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.12
  '''
  SELECT "posthog_dashboardtile"."id"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE (NOT ("posthog_dashboardtile"."deleted"
              AND "posthog_dashboardtile"."deleted" IS NOT NULL)
         AND NOT ("posthog_dashboard"."deleted")
         AND "posthog_dashboardtile"."dashboard_id" = 2)
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.13
  '''
  SELECT "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.14
  '''
  SELECT "posthog_dashboardtile"."id"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE (NOT ("posthog_dashboardtile"."deleted"
              AND "posthog_dashboardtile"."deleted" IS NOT NULL)
         AND NOT ("posthog_dashboard"."deleted")
         AND "posthog_dashboardtile"."dashboard_id" = 2)
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.15
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.16
  '''
  SELECT "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."query",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at",
         "posthog_dashboarditem"."deprecated_tags",
         "posthog_dashboarditem"."tags"
  FROM "posthog_dashboarditem"
  WHERE "posthog_dashboarditem"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.17
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.18
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.19
  '''
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."text_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboardtile"."last_refresh",
         "posthog_dashboardtile"."refreshing",
         "posthog_dashboardtile"."refresh_attempt",
         "posthog_dashboardtile"."deleted"
  FROM "posthog_dashboardtile"
  WHERE "posthog_dashboardtile"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.2
  '''
  SELECT 1 AS "a"
  FROM "posthog_organizationmembership"
  WHERE ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "posthog_organizationmembership"."user_id" = 2)
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.20
  '''
  SELECT "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."query",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at",
         "posthog_dashboarditem"."deprecated_tags",
         "posthog_dashboarditem"."tags"
  FROM "posthog_dashboarditem"
  WHERE "posthog_dashboarditem"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.21
  '''
  SELECT "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboard"."deprecated_tags",
         "posthog_dashboard"."tags",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared"
  FROM "posthog_dashboard"
  WHERE "posthog_dashboard"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.22
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.23
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.24
  '''
  SELECT "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."query",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at",
         "posthog_dashboarditem"."deprecated_tags",
         "posthog_dashboarditem"."tags"
  FROM "posthog_dashboarditem"
  WHERE "posthog_dashboarditem"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.25
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.26
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.27
  '''
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."text_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboardtile"."last_refresh",
         "posthog_dashboardtile"."refreshing",
         "posthog_dashboardtile"."refresh_attempt",
         "posthog_dashboardtile"."deleted"
  FROM "posthog_dashboardtile"
  WHERE "posthog_dashboardtile"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.28
  '''
  SELECT "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."query",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at",
         "posthog_dashboarditem"."deprecated_tags",
         "posthog_dashboarditem"."tags"
  FROM "posthog_dashboarditem"
  WHERE "posthog_dashboarditem"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.29
  '''
  SELECT "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboard"."deprecated_tags",
         "posthog_dashboard"."tags",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared"
  FROM "posthog_dashboard"
  WHERE "posthog_dashboard"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.3
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."key" = 'copied-flag-key'
         AND "posthog_featureflag"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.30
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.31
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."active"
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_featureflag"."team_id" = 2)
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.32
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.33
  '''
  SELECT "posthog_experiment"."id",
         "posthog_experiment"."name",
         "posthog_experiment"."description",
         "posthog_experiment"."team_id",
         "posthog_experiment"."filters",
         "posthog_experiment"."parameters",
         "posthog_experiment"."secondary_metrics",
         "posthog_experiment"."created_by_id",
         "posthog_experiment"."feature_flag_id",
         "posthog_experiment"."exposure_cohort_id",
         "posthog_experiment"."start_date",
         "posthog_experiment"."end_date",
         "posthog_experiment"."created_at",
         "posthog_experiment"."updated_at",
         "posthog_experiment"."archived"
  FROM "posthog_experiment"
  WHERE "posthog_experiment"."feature_flag_id" = 2
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.34
  '''
  SELECT "posthog_survey"."id",
         "posthog_survey"."team_id",
         "posthog_survey"."name",
         "posthog_survey"."description",
         "posthog_survey"."linked_flag_id",
         "posthog_survey"."targeting_flag_id",
         "posthog_survey"."internal_targeting_flag_id",
         "posthog_survey"."type",
         "posthog_survey"."conditions",
         "posthog_survey"."questions",
         "posthog_survey"."appearance",
         "posthog_survey"."created_at",
         "posthog_survey"."created_by_id",
         "posthog_survey"."start_date",
         "posthog_survey"."end_date",
         "posthog_survey"."updated_at",
         "posthog_survey"."archived",
         "posthog_survey"."responses_limit",
         "posthog_survey"."iteration_count",
         "posthog_survey"."iteration_frequency_days",
         "posthog_survey"."iteration_start_dates",
         "posthog_survey"."current_iteration",
         "posthog_survey"."current_iteration_start_date"
  FROM "posthog_survey"
  WHERE "posthog_survey"."linked_flag_id" = 2
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.35
  '''
  SELECT "posthog_earlyaccessfeature"."id",
         "posthog_earlyaccessfeature"."team_id",
         "posthog_earlyaccessfeature"."feature_flag_id",
         "posthog_earlyaccessfeature"."name",
         "posthog_earlyaccessfeature"."description",
         "posthog_earlyaccessfeature"."stage",
         "posthog_earlyaccessfeature"."documentation_url",
         "posthog_earlyaccessfeature"."created_at"
  FROM "posthog_earlyaccessfeature"
  WHERE "posthog_earlyaccessfeature"."feature_flag_id" = 2
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.36
  '''
  SELECT "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboard"."deprecated_tags",
         "posthog_dashboard"."tags",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared"
  FROM "posthog_dashboard"
  INNER JOIN "posthog_featureflagdashboards" ON ("posthog_dashboard"."id" = "posthog_featureflagdashboards"."dashboard_id")
  WHERE (NOT ("posthog_dashboard"."deleted")
         AND "posthog_featureflagdashboards"."feature_flag_id" = 2)
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.37
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.38
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_V2_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.39
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.4
  '''
  SELECT "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.40
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_V2_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.41
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.42
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.43
  '''
  SELECT "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."query",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at",
         "posthog_dashboarditem"."deprecated_tags",
         "posthog_dashboarditem"."tags"
  FROM "posthog_dashboarditem"
  WHERE "posthog_dashboarditem"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.44
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.45
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_V2_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.46
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.47
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_V2_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.48
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.49
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_V2_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.5
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.50
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.51
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_V2_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.52
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.53
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_V2_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.54
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.55
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_V2_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.56
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.57
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.58
  '''
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."text_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboardtile"."last_refresh",
         "posthog_dashboardtile"."refreshing",
         "posthog_dashboardtile"."refresh_attempt",
         "posthog_dashboardtile"."deleted"
  FROM "posthog_dashboardtile"
  WHERE "posthog_dashboardtile"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.59
  '''
  SELECT "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."query",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at",
         "posthog_dashboarditem"."deprecated_tags",
         "posthog_dashboarditem"."tags"
  FROM "posthog_dashboarditem"
  WHERE "posthog_dashboarditem"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.6
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE (NOT "posthog_featureflag"."deleted"
         AND "posthog_featureflag"."key" = 'copied-flag-key'
         AND "posthog_featureflag"."team_id" = 2)
  ORDER BY "posthog_featureflag"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.60
  '''
  SELECT "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboard"."deprecated_tags",
         "posthog_dashboard"."tags",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared"
  FROM "posthog_dashboard"
  WHERE "posthog_dashboard"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.61
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.62
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_V2_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.63
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.64
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_V2_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.65
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.66
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_V2_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.67
  '''
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.68
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."active"
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_featureflag"."team_id" = 2)
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.69
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.7
  '''
  SELECT 1 AS "a"
  FROM "posthog_featureflag"
  WHERE (NOT "posthog_featureflag"."deleted"
         AND "posthog_featureflag"."key" = 'copied-flag-key'
         AND "posthog_featureflag"."team_id" = 2)
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.70
  '''
  SELECT "posthog_experiment"."id",
         "posthog_experiment"."name",
         "posthog_experiment"."description",
         "posthog_experiment"."team_id",
         "posthog_experiment"."filters",
         "posthog_experiment"."parameters",
         "posthog_experiment"."secondary_metrics",
         "posthog_experiment"."created_by_id",
         "posthog_experiment"."feature_flag_id",
         "posthog_experiment"."exposure_cohort_id",
         "posthog_experiment"."start_date",
         "posthog_experiment"."end_date",
         "posthog_experiment"."created_at",
         "posthog_experiment"."updated_at",
         "posthog_experiment"."archived"
  FROM "posthog_experiment"
  WHERE "posthog_experiment"."feature_flag_id" = 2
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.71
  '''
  SELECT "posthog_survey"."id",
         "posthog_survey"."team_id",
         "posthog_survey"."name",
         "posthog_survey"."description",
         "posthog_survey"."linked_flag_id",
         "posthog_survey"."targeting_flag_id",
         "posthog_survey"."type",
         "posthog_survey"."conditions",
         "posthog_survey"."questions",
         "posthog_survey"."appearance",
         "posthog_survey"."created_at",
         "posthog_survey"."created_by_id",
         "posthog_survey"."start_date",
         "posthog_survey"."end_date",
         "posthog_survey"."updated_at",
         "posthog_survey"."archived",
         "posthog_survey"."responses_limit"
  FROM "posthog_survey"
  WHERE "posthog_survey"."linked_flag_id" = 2
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.72
  '''
  SELECT "posthog_earlyaccessfeature"."id",
         "posthog_earlyaccessfeature"."team_id",
         "posthog_earlyaccessfeature"."feature_flag_id",
         "posthog_earlyaccessfeature"."name",
         "posthog_earlyaccessfeature"."description",
         "posthog_earlyaccessfeature"."stage",
         "posthog_earlyaccessfeature"."documentation_url",
         "posthog_earlyaccessfeature"."created_at"
  FROM "posthog_earlyaccessfeature"
  WHERE "posthog_earlyaccessfeature"."feature_flag_id" = 2
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.73
  '''
  SELECT "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboard"."deprecated_tags",
         "posthog_dashboard"."tags",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared"
  FROM "posthog_dashboard"
  INNER JOIN "posthog_featureflagdashboards" ON ("posthog_dashboard"."id" = "posthog_featureflagdashboards"."dashboard_id")
  WHERE (NOT ("posthog_dashboard"."deleted")
         AND "posthog_featureflagdashboards"."feature_flag_id" = 2)
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.8
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."deleted"
         AND "posthog_featureflag"."key" = 'copied-flag-key'
         AND "posthog_featureflag"."team_id" = 2)
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.9
  '''
  SELECT (true) AS "flag_X_condition_0"
  FROM "posthog_person"
  WHERE "posthog_person"."team_id" = 2
  LIMIT 10
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success
  '''
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.1
  '''
  SELECT "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.2
  '''
  SELECT 1 AS "a"
  FROM "posthog_organizationmembership"
  WHERE ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "posthog_organizationmembership"."user_id" = 2)
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.3
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.4
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE (NOT "posthog_featureflag"."deleted"
         AND "posthog_featureflag"."key" = 'key-1'
         AND "posthog_featureflag"."team_id" IN (1,
                                                 2,
                                                 3,
                                                 4,
                                                 5 /* ... */))
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.5
  '''
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.6
  '''
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.7
  '''
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21
  '''
# ---
